examples/fail/not-in-scope.agda
-- Not in Scope

A : Set
A = Prop

-- should fail with scope error
